objects/MobilePaks__Included_Field__c.object
<CustomObject>
    <description>Contains information for a field to be included in the data sent to Veelo.</description>
    <fields>
        <fullName>MobilePaks__Core_Object__c</fullName>
        <description>The object detail page for the affected data operation.</description>
        <label>Core Object</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Account</fullName>
                </value>
                <value>
                    <fullName>Lead</fullName>
                </value>
                <value>
                    <fullName>Contact</fullName>
                </value>
                <value>
                    <fullName>Opportunity</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MobilePaks__Included_Field__c</fullName>
        <label>Included Field</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MobilePaks__Included_Object__c</fullName>
        <label>Included Object</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MobilePaks__Relationship_Field__c</fullName>
        <description>The name of the lookup field relating the object to a core object.</description>
        <label>Relationship Field</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <label>Veelo Included Field</label>
    <listViews>
        <fullName>MobilePaks__All</fullName>
        <columns>MobilePaks__Core_Object__c</columns>
        <columns>MobilePaks__Included_Field__c</columns>
        <columns>MobilePaks__Included_Object__c</columns>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>IF-{00000}</displayFormat>
        <label>Veelo Included Field Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Veelo Included Fields</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>